--- a/BEGA_PROJECT/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/BEGA_PROJECT/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,12 @@
-{"properties": [{
-  "name": "spring.jwt.secret",
-  "type": "java.lang.String",
-  "description": "A description for 'spring.jwt.secret'"
-}]}
+{"properties": [
+  {
+    "name": "spring.jwt.secret",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.jwt.secret'"
+  },
+  {
+    "name": "spring.jwt.refresh-expiration",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.jwt.refresh-expiration'"
+  }
+]}
