--- a/BEGA_PROJECT/build.gradle
+++ b/BEGA_PROJECT/build.gradle
@@ -43,6 +43,9 @@ dependencies {
 	implementation 'com.mysql:mysql-connector-j'
 	implementation 'org.postgresql:postgresql:42.6.0'
 	runtimeOnly 'org.postgresql:postgresql'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	// Flux/Mono 타입(Type)을 사용하려면 Reactor core가 클래스패스(Classpath)에 사용 가능해야 합니다.
+	implementation 'io.projectreactor:reactor-core'
 }
 
 tasks.named('test') {
