--- a/BEGA_PROJECT/.env.example
+++ b/BEGA_PROJECT/.env.example
@@ -1,6 +1,19 @@
 # .env.example 파일 (Git에 포함되어야 함)
 # 이 파일은 프로젝트 구동에 필요한 환경 변수 키 목록을 보여줍니다.
 
+
+# --- Database (Supabase) ---
+DB_URL=jdbc:postgresql://<YOUR_SUPABASE_HOST>:6543/postgres?sslmode=require
+DB_USERNAME=postgres.xxxxxxxxxxxxxxxx
+DB_PASSWORD=your-strong-password
+
+# --- (Optional) Spring profile ---
+SPRING_PROFILES_ACTIVE=local
+
+# --- Supabase Storage ---
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+
 # Google OAuth2 인증 정보
 # TODO: Google Cloud Console에서 발급받은 실제 Client ID를 입력하세요.
 GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID
@@ -10,7 +23,7 @@ GOOGLE_CLIENT_SECRET=YOUR_GOOGLE_CLIENT_SECRET
 KAKAO_CLIENT_ID=YOUR_KAKAO_CLIENT_ID
 KAKAO_CLIENT_SECRET=YOUR_KAKAO_CLIENT_SECRET
 
-# H2 데이터베이스 정보
-DB_URL=jdbc:h2:~/local
-DB_USERNAME=sa
-DB_PASSWORD=
+# # H2 데이터베이스 정보
+# DB_URL=jdbc:h2:~/local
+# DB_USERNAME=sa
+# DB_PASSWORD=
