--- a/BEGA_PROJECT/src/main/resources/application.properties
+++ b/BEGA_PROJECT/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=BEGA_PROJECT
+
+# Server Port
+server.port=8080
+
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:6543/postgres
+spring.datasource.username=postgres.ulkessubabctdbjsskqy
+spring.datasource.password=gg7YZXm5j14jyv61
+spring.datasource.driver-class-name=org.postgresql.Driver
