--- a/BEGA_PROJECT/src/main/resources/application.yml
+++ b/BEGA_PROJECT/src/main/resources/application.yml
@@ -85,8 +85,8 @@ logging:
 
 # Supabase Storage 설정
 supabase:
-  url: ${DB_URL}
-  service-role-key: ${SUPABASE_SERVICE_ROLE_KEY}
+  url: https://zyofzvnkputevakepbdm.supabase.co
+  service-role-key: postgresql://postgres.zyofzvnkputevakepbdm:kboplatform2025@aws-1-ap-northeast-2.pooler.supabase.com:5432/postgres
   storage:
     bucket: cheer-assets
     signed-url-ttl-seconds: 3600
