--- a/BEGA_PROJECT/src/main/resources/application.yml
+++ b/BEGA_PROJECT/src/main/resources/application.yml
@@ -54,8 +54,8 @@ logging:
 
 # --- Supabase 설정 ---
 supabase:
-  url: $https://zyofzvnkputevakepbdm.supabase.co
-  service-role-key: $postgresql://postgres.zyofzvnkputevakepbdm:kboplatform2025@aws-1-ap-northeast-2.pooler.supabase.com:5432/postgres
+  url : ${SUPABASE_URL}
+  service-role-key: ${SUPABASE_SERVICE_ROLE_KEY}
   storage:
     buckets: 
       cheer: cheer-assets
