토큰 캐싱추가
jwt 토큰 캐싱추가

--- a/BEGA_PROJECT/build.gradle
+++ b/BEGA_PROJECT/build.gradle
@@ -52,6 +52,8 @@ dependencies {
 	
 	implementation 'org.springframework.boot:spring-boot-starter-mail'	
 	implementation 'me.paulschwarz:spring-dotenv:4.0.0'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
 }
 
 tasks.named('test') {
