--- a/BEGA_PROJECT/src/main/resources/application.yml
+++ b/BEGA_PROJECT/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   config:
     import: optional:file:.env[.properties] # .env 파일 로드
   jpa:
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         format-sql: true
@@ -67,14 +67,6 @@ spring:
   jwt:
     secret: ${JWT_SECRET} # 환경변수 또는 기본값
     refresh-expiration: 86400000
-
-# --- 로깅 설정 ---
-logging:
-  level:
-    root: INFO
-    org.springframework.security: DEBUG
-    org.hibernate.SQL: DEBUG
-    com.example: DEBUG
 
 # --- Supabase 설정 ---
 supabase:
