--- a/BEGA_PROJECT/src/main/resources/application.yml
+++ b/BEGA_PROJECT/src/main/resources/application.yml
@@ -47,11 +47,12 @@ spring:
             client-secret: ${GOOGLE_CLIENT_SECRET}
             scope: [ profile, email ]
             client-authentication-method: client_secret_post
+            redirect-uri: ${GOOGLE_REDIRECT_URI:http://localhost:8080/login/oauth2/code/google}
           kakao:
             client-id: ${KAKAO_CLIENT_ID}
             client-secret: ${KAKAO_CLIENT_SECRET}
             authorization-grant-type: authorization_code
-            redirect-uri: "http://localhost:8080/login/oauth2/code/kakao"
+            redirect-uri: ${KAKAO_REDIRECT_URI:http://localhost:8080/login/oauth2/code/kakao}
             scope: [ profile_nickname, account_email ]
             client-authentication-method: client_secret_post
             client-name: Kakao
