Add Redis cache integration and seat info to diary
Caffeine과 함께 Redis를 L2 분산 캐시로 통합하여 하이브리드 캐싱 구조를 구현하고, 이에 따라 CacheConfig를 수정하고 RedisConfig를 추가했습니다.

BegaDiary 엔티티와 DiaryRequestDto에 좌석 정보 필드(section, block, seatRow, seatNumber)를 추가했으며, 관련 서비스 로직과 빌더 로직을 함께 업데이트했습니다.

GameEntity에서 stadiumId 타입을 String으로 변경했고, Party 및 Notification 엔티티는 컬럼 정의를 조정했습니다. 또한 Redis 및 JPA 설정을 반영하기 위해 application.yml을 업데이트했습니다.

실시간 투표 기능을 위해 CheerBattleService와 CheerWebSocketController를 도입했으며, 초기 단계의 StadiumController 스텁(stub)을 추가했습니다.

--- a/BEGA_PROJECT/src/main/resources/application.yml
+++ b/BEGA_PROJECT/src/main/resources/application.yml
@@ -16,6 +16,19 @@ spring:
   devtools:
     restart:
       enabled: false # 자동 재시작 비활성화
+
+  # Redis 설정
+  data:
+    redis:
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
+      timeout: 2000ms
+      lettuce:
+        pool:
+          max-active: 10
+          max-idle: 5
+          min-idle: 2
+          max-wait: 1000ms
       
   # 파일 업로드 설정
   servlet:
@@ -109,8 +122,8 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     hikari:
-      maximum-pool-size: 5
-      minimum-idle: 1
+      maximum-pool-size: 15
+      minimum-idle: 5
       connection-timeout: 20000
       validation-timeout: 5000
       idle-timeout: 300000
@@ -119,7 +132,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: none # DB에 이미 데이터와 뷰가 있으므로 DDL 자동 실행 비활성화
+      ddl-auto: update # 엔티티 변경(컬럼 추가) 반영을 위해 update로 변경
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
