--- a/BEGA_PROJECT/build.gradle
+++ b/BEGA_PROJECT/build.gradle
@@ -56,6 +56,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
 
+    // Redis 캐시
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.apache.commons:commons-pool2:2.12.0'
+
     // 이미지 처리 (압축, 리사이징)
     implementation 'net.coobird:thumbnailator:0.4.20'
 }
