feat: 인프라 비동기 처리 및 파티/응원보드 기능 고도화
- JobRunr를 도입하여 복잡한 작업을 비동기로 처리하고, 관련 DB 테이블을 추가함
- RedisPostService를 통해 게시글 데이터를 Redis에 캐싱하고
  DB와 동기화하는 스케줄러를 구현함
- API 과부하 방지를 위해 공통 모듈에 요청 속도 제한(Rate Limiting) 로직을 추가함

- 파티 신청(PartyApplication) 및 채팅(ChatMessage) 엔티티 구조를 개선하고
  웹소켓 설정을 통해 실시간 파티 매칭 및 채팅 기능을 강화함

- 응원 보드 게시글에 재게시(Repost) 기능을 지원하도록
  DB 스키마를 변경하고 관련 DTO 및 매퍼 필드를 확장함

- 관리자 서비스 로직을 정리하고
  불필요한 백업 파일(Dockerfile.java17.backup)을 제거함

--- a/BEGA_PROJECT/build.gradle
+++ b/BEGA_PROJECT/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     implementation 'com.twelvemonkeys.imageio:imageio-webp:3.12.0' // WebP support
     implementation 'com.twelvemonkeys.imageio:imageio-core:3.12.0' // Explicit core dependency
     runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.115.Final:osx-aarch_64' // Fix MacOS Netty DNS warning
+    
+    // JobRunr (DB-backed Queue)
+    implementation 'org.jobrunr:jobrunr-spring-boot-3-starter:8.4.0'
 }
 
 tasks.named('test') {
