Add Oracle/OCI, lightweight posts & block checks
Oracle 환경으로 실행 환경 및 DB 지원을 전환하고(OCI S3 환경 변수 추가), Flyway와 ojdbc를 활성화했으며, bootRun의 메모리 할당을 증가시켰습니다.

또한 경량 게시글 DTO/엔드포인트(PostLightweightSummaryRes, PostChangesResponse)를 추가해 요약 조회 / 목록 조회 / 폴링을 지원했습니다.

CheerPost 및 관련 DTO에서 title 필드를 제거하고, 차단 사용자 필터링을 지원하기 위해 Repository에 더 풍부한 EntityGraph와 신규 쿼리(excludedIds, countNewPostsSince, findLatestPostId)를 추가했습니다.

--- a/BEGA_PROJECT/.env.example
+++ b/BEGA_PROJECT/.env.example
@@ -5,15 +5,30 @@
 # --- Security ---
 JWT_SECRET=your-32-character-or-longer-secret-key
 
-# --- Database (Supabase) ---
-DB_URL=jdbc:postgresql://<YOUR_SUPABASE_HOST>:6543/postgres?sslmode=require
-DB_USERNAME=postgres.xxxxxxxxxxxxxxxx
-DB_PASSWORD=your-strong-password
+# --- Database (Oracle) ---
+SPRING_DATASOURCE_URL=jdbc:oracle:thin:@your-oracle-host:1521/yourdb
+SPRING_DATASOURCE_USERNAME=your_db_username
+SPRING_DATASOURCE_PASSWORD=your_db_password
+
+# (Optional) legacy fallback vars (prod profile uses DB_URL if SPRING_DATASOURCE_URL is unset)
+DB_URL=jdbc:oracle:thin:@your-oracle-host:1521/yourdb
+DB_USERNAME=your_db_username
+DB_PASSWORD=your_db_password
 
 # --- (Optional) Spring profile ---
 SPRING_PROFILES_ACTIVE=local
 
-# --- Supabase Storage ---
+# --- OCI Object Storage (S3 compatible) ---
+# Supabase 무료 플랜 용량 한계로 OCI로 전환했습니다.
+OCI_S3_ACCESS_KEY=your_access_key
+OCI_S3_SECRET_KEY=your_secret_key
+OCI_S3_ENDPOINT=https://<namespace>.compat.objectstorage.<region>.oraclecloud.com
+OCI_S3_REGION=ap-seoul-1
+OCI_S3_BUCKET=your_bucket
+
+# --- Supabase (migration only) ---
+# 과거 사용 스토리지. 마이그레이션/검증 용도로만 유지합니다.
+SUPABASE_DB_URL=postgresql://postgres:[password]@db.[project-ref].supabase.co:5432/postgres
 SUPABASE_URL=https://your-project-id.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
