Harden auth, JWT & OAuth2 state handling
주요 보안 및 기능 개선 사항
- SecurityConfig 재정비
- public / auth / system /
admin 엔드포인트 상수 그룹화
- 요청 매처(request matcher)와 인가 순서 정교화
- OPTIONS 프리플라이트 요청 허용

JWT 처리 강화
- JWTFilter에서 token_type 강제 검사 추가 (access 토큰만 허용)
- JWTUtil에 캐시 무효화(eviction) API 추가
- 로그아웃 시 캐시된 클레임을 무효화하도록 연동

OAuth2 상태 플로우 개선
- OAuth2StateStorageData 도입
- OAuth2StateService 리팩터링:
- Redis에는 userId만 저장 (민감 정보 최소화)
- 상태 소비 시 DB에서 사용자 로드
- CustomSuccessHandler에서 userId 저장/소비 방식으로 업데이트

계정 상태 관리 지원
- UserEntity에 enabled, locked, lock_expires_at 필드 추가
- DB 마이그레이션 V32 적용
- CustomUserDetails에서 enabled/locked 상태를 강제 검증

팀 조회 로직 강화
- TeamRepository.findByTeamId
AndIsActive 신규 추가
- UserService, MyPageService에서 활성 팀만 조회하도록 수정

랭킹 / UI 개선
- GameRepository에서 games_behind 계산
- 홈 페이지 DTO 및 서비스에서 gamesBehind 노출

WebSocket CORS 설정 개선
- 허용 origin을 프로퍼티로 설정 가능하도록 변경

Prediction API 보강
- 투표 시점 검증 로직(validateVoteOpen) 추가
- 컨트롤러 응답 정리
- Prediction 모델에 getter 추가

기타 변경 사항
- APIController의 쿠키 secure 플래그를 설정값으로 제어 가능하게 변경
- build.gradle, application.yml 의존성 및 설정 조정
- 사용되지 않던 ApiResponse DTO 제거

--- a/BEGA_PROJECT/src/main/resources/application.yml
+++ b/BEGA_PROJECT/src/main/resources/application.yml
@@ -128,7 +128,9 @@ app:
     url: ${APP_FRONTEND_URL:http://localhost:3000}
   backend:
     url: ${APP_BACKEND_URL:http://localhost:8080}
-  allowed-origins: ${APP_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173,http://localhost:8080}
+  allowed-origins: ${APP_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173,http://localhost:5176,http://localhost:8080}
+  cookie:
+    secure: false  # 개발 환경 기본값 (HTTP), prod 프로필에서 true로 오버라이드
 
 
 
@@ -260,7 +262,10 @@ spring:
     locations: classpath:db/migration
     ignore-missing-migrations: true
 
-
+# prod 프로필 쿠키 보안 설정
+app:
+  cookie:
+    secure: true  # HTTPS 환경에서 Secure 플래그 활성화
 
 ---
 # 'local' 프로필: 로컬 테스트 환경 (H2 In-Memory)
