--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@ out/
 
 ### .env ###
 .env
+.env.*
+!.env.example
 .venv
 env
 venv
@@ -57,6 +59,9 @@ venv
 
 # Build folder
 /build
+
+# Local data
+box_score.csv
 
 # Log files
 BEGA_PROJECT/logs/
