--- a/BEGA_PROJECT/src/main/resources/application.yml
+++ b/BEGA_PROJECT/src/main/resources/application.yml
@@ -95,8 +95,7 @@ spring:
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
 
-
-        # 이메일 설정 (환경 변수 사용)
+  # 이메일 설정 (환경 변수 사용)
   mail:
     host: smtp.gmail.com
     port: 587
@@ -121,6 +120,21 @@ spring:
     database:
       skip-create: false
       table-prefix: jobrunr_ # 테이블 충돌 방지
+
+baseball:
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: ${BASEBALL_DB_URL:${DB_URL}}
+    username: ${BASEBALL_DB_USERNAME:${DB_USERNAME}}
+    password: ${BASEBALL_DB_PASSWORD:${DB_PASSWORD}}
+    hikari:
+      maximum-pool-size: 5
+      minimum-idle: 1
+      connection-timeout: 30000
+      validation-timeout: 5000
+      idle-timeout: 300000
+      max-lifetime: 1200000
+      connection-test-query: SELECT 1
 
 # 애플리케이션 공통 설정
 app:
@@ -177,6 +191,42 @@ spring:
   config:
     activate:
       on-profile: dev
+  flyway:
+    enabled: false
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: dev-google
+            client-secret: dev-google-secret
+          kakao:
+            client-id: dev-kakao
+            client-secret: dev-kakao-secret
+          naver:
+            client-id: dev-naver
+            client-secret: dev-naver-secret
+        provider:
+          google:
+            authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
+            token-uri: https://oauth2.googleapis.com/token
+            user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
+            user-name-attribute: sub
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+  mail:
+    host: localhost
+    port: 25
+    username: 
+    password: 
   datasource:
     driver-class-name: org.postgresql.Driver
     url: ${DB_URL}
@@ -197,8 +247,7 @@ spring:
     defer-datasource-initialization: true # EntityManagerFactory 초기화 전에 스크립트 실행
   sql:
     init:
-      mode: always # Missing table creation
-      schema-locations: classpath:schema-postgresql.sql
+      mode: never
       naming:
         physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
     properties:
